# SnowPhone

./: .gitignore  CMakeLists.txt  IPPhone.cpp  IP_client.c  IP_server.c  README.md  client.cpp  client_recv.c  phone_body.c  server.cpp  server_send.c
include/: opencv.h
